--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "flowbite": "^2.3.0"
+        "flowbite": "^2.3.0",
+        "mobius1-selectr": "^2.4.13"
     }
 }
