--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-install-cmd": [
+            "php -r \"if (!extension_loaded('xml')) { echo 'Missing XML extension'; exit(1); }\""
         ]
     },
     "extra": {
